<resources>
    <string name="app_name">iContact</string>
    <string name="titleRegister">Register</string>
    <string name="textLogin">Login</string>
    <string name="textRegister">Register</string>
    <string name="textCreate">Create</string>
    <string name="textBack">Back</string>
    <string name="text_rbFemale">Female</string>
    <string name="text_rbMale">Male</string>
    <string name="textSubject">Subject:</string>
    <string name="textNew">New subject</string>
    <string name="title_info">Student Info</string>
    <string name="title_homework">Homework</string>
    <string name="title_exam">Exam</string>
    <string name="title_contact">Teacher List</string>
    <string name="text_studentId">Student ID:</string>
    <string name="text_class">Class:</string>
    <string name="text_gender">Gender:</string>
    <string name="text_dayOfBirth">Day of Birth:</string>
    <string name="text_phoneNumber">Phone Number:</string>
    <string name="text_logOut">Log Out</string>
    <string name="text_settings">Settings</string>
    <string name="text_semester_grade">Semester Grade</string>
    <string name="text_contactTeacher">Contact Teacher</string>
    <string name="text_contactMainTeacher">Contact Teacher</string>
    <string name="text_email">E-mail:</string>
    <string name="text_name">Name:</string>
    <string name="text_subject1">Subject 1 :</string>
    <string name="text_subject2">Subject 2 :</string>
    <string name="title_contactDetail">Contact Teacher</string>
    <string name="text_editInfo">Edit Info</string>
    <string name="title_infoEdit">Editing Info</string>
    <string name="title_navigation_info">Info</string>
    <string name="text_confirmEditInfo">Apply Changes</string>
    <string name="text_exit">Exit</string>
    <string name="msg_wantToExit">Are you sure you want to leave? All unsaved data will be lost!</string>
    <string name="msg_WantToDelete">Are you sure you want to delete this item? This is an irreversible action!</string>
    <string name="text_Yes">Exit</string>
    <string name="text_No">Cancel</string>
    <string name="text_title">Title:</string>
    <string name="text_Content">Content:</string>
    <string name="title_homeworkAdd">Establish New Homework</string>
    <string name="text_AddHomework">Establish</string>
    <string name="text_no_network">No network available!</string>
    <string name="text_no_server">Can\'t connect to the server now! Please try again later!</string>
    <string name="msg_data_error">Data error! Please restart the app!</string>
    <string name="text_updateHomework">Update</string>
    <string name="title_homeworkUpdateDelete">Update Homework</string>
    <string name="text_deleteHomework">Delete Homework</string>
    <string name="text_delete">delete</string>
    <string name="text_teacher">Teacher</string>
    <string name="text_address">Address:</string>
    <string name="text_addHomeworkFailed">Establish homework failed!!</string>
    <string name="text_addHomeworkSucceeded">Establish succeeded!!</string>
    <string name="text_editStudentInfoSucceeded">Update succeeded!!</string>
    <string name="text_editStudentInfoFailed">Update Failed!!</string>
    <string name="text_takePhoto">Take Photo</string>
    <string name="text_pickPhoto">Pick Photo</string>
    <string name="msg_NoCameraAppsFound">No Camera Apps Found!!</string>
    <string-array name="subject">
        <item>國文</item>
        <item>英文</item>
        <item>數學</item>
        <item>社會</item>
        <item>自然</item>
    </string-array>
    <string-array name="anothersubject">
        <item>無</item>
        <item>國文</item>
        <item>英文</item>
        <item>數學</item>
        <item>社會</item>
        <item>自然</item>
    </string-array>
    <string name="tab_text_1">StudentList</string>
    <string name="tab_text_2">TeacherList</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Exit">Exit</string>
    <string name="modify_file">modify_file</string>
    <string name="Logging_out">Logginout</string>
    <string name="ClassManagement">ClassManagement</string>
    <string name="ExamSubject">ExamSubject</string>
    <string name="Homework">Homework</string>
    <string name="ParentConnection">ParentConnection</string>
    <string name="Phone">PhoneNumber</string>
    <string name="AddStudent">AddStudent</string>
    <string name="Birthday">Birthday</string>
    <string name="Gender">Gender</string>
    <string name="Name">Name</string>
    <string name="Class">Class</string>
    <string name="SchoolNumber">SchoolNumber</string>
    <string name="msg_NoSpotsFound">MassageNotFound</string>
    <string name="msg_NoNetwork">NoNetWork</string>
    <string name="NewAccount">NewAccount</string>
    <string name="NewPassword">NewPassword</string>
    <string name="text_Delete">Delete</string>
    <string name="msg_DeleteFail">DeleteFail</string>
    <string name="msg_DeleteSuccess">DeleteSuccess</string>
    <string name="StudentName">StudentName</string>
    <string name="Search">Search</string>
    <string name="EnterName">EnterName</string>
    <string name="IDNotFount">ID Not Found</string>
    <string name="AddNewTeacher">AddNewTeacher</string>
    <string name="text_btYes">Yes</string>
    <string name="text_btNo">No</string>
    <string name="doYouReallyWantToAddThisTeacher">doYouReallyWantToAddThisTeacher?</string>
    <string name="msg_wantToLogOut">Are you sure you want to log out? All unsaved data will be lost!</string>
    <string name="text_checkHomework">Confirm Change</string>
    <string name="text_check">Didn\'t Hand In</string>
    <string name="text_tabHomeworkContent">Content</string>
    <string name="text_tabHomeworkCheck">Handing Status</string>
    <string name="ClassName">ClassName</string>
    <string name="Sure">Sure</string>
    <string name="btSearch">Search</string>
    <string name="ClassSearch">SearchClass</string>
    <string name="etSearch">ClassCode</string>
    <string name="ClassNam">ClassName : </string>
    <string name="tvsubject">Subject : </string>
    <string name="Number">Number</string>
    <string name="Achievement">Achievement</string>
    <string name="_">____________________________________________________________</string>
    <string name="send">Send</string>
    <string name="Teacher">Teacher :</string>
    <string name="Teachers">Teacher</string>
    <string name="Subject">Subject : </string>
    <string name="Subjects">Subject</string>
    <string name="Date">ExamDate :</string>
    <string name="Dates">YYYY/MM/DD</string>
    <string name="Title">Title :</string>
    <string name="Titles">Title</string>
    <string name="Context">Content description :</string>
    <string name="Contexts">Content description</string>
    <string name="Delete">Delete Subject</string>
    <string name="tvSignin">Achievement\nsign in</string>
    <string name="Update">Update</string>
    <string name="Home">Home</string>
    <string name="manager">Manager</string>
    <string name="homework">Homework</string>
    <string name="Exam">Achievement</string>
    <string name="phone">Phone</string>
    <string name="sure">Sure</string>
    <string name="AchievementS">Performance Analysis Chart</string>
    <string name="Analysis">Analysis</string>
    <string name="ExamSubject1">ExamSubject : </string>
    <string name="ClassCode">ClassCode: </string>
    <string name="text_teacherId">TeacherID</string>
    <string name="text_examScore">examscore</string>
    <string name="AchievementSignin">Achievement SignIn</string>
    <string name="createsubject">CreateExamSubject</string>
    <string name="updatesubject">UpDateExamSubject</string>
    <string name="ExamSubjectt">ExamSubject</string>
    <string name="updateAchievement">UpdateAchievement</string>
    <string name="title_homeworkOverview">Homework Overview</string>
    <string name="title_examOverview">Exam Overview</string>
    <string name="msg_NoProfileFound">NoProfileFound</string>
    <string name="Boy">Boy</string>
    <string name="Girl">Girl</string>
    <string name="text_UserId">User_ID</string>
    <string name="msg_InputEmpty">CanNotImpty</string>
    <string name="text_UserName">UserName</string>
    <string name="text_UseGender">UseGender</string>
    <string name="text_UserPhone">UserPhone</string>
    <string name="text_UserBirth">UserBirth</string>
    <string name="msg_UpdateFail">UpdateFail</string>
    <string name="msg_UpdateSuccess">UpdateSuccess</string>
    <string name="ChooseGender">Choose Gender</string>
</resources>
