<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginTop="15dp"
            android:text="@string/Title"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:id="@+id/etTitle"
                />
        </RelativeLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:hint="@string/Date" />
            <EditText
                android:id="@+id/etDate"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:inputType="date"
                android:layout_height="wrap_content" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginTop="15dp"
            android:text="@string/Context"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/etContent"
           />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="wrap_content"
            android:text="@string/Update"
            android:textColor="#ffffff"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/btSure"
            android:layout_marginBottom="40dp"/>
        <Button
            android:id="@+id/btSure"
            android:layout_width="wrap_content"
            android:text="@string/sure"
            android:textColor="#ffffff"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:layout_marginBottom="80dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="305dp"
            />
    </RelativeLayout>
</LinearLayout>