<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivTeacherPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/user_pic" />

        <LinearLayout
            android:id="@+id/llPhotoEdit"
            android:layout_below="@id/ivTeacherPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btTeacherInfoTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btTackPhotoClick"
                android:text="@string/text_takePhoto"/>

            <Button
                android:id="@+id/btTeacherInfoPickPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btPickPhotoClick"
                android:text="@string/text_pickPhoto"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPhotoEdit"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_studentId"/>

                <EditText
                    android:id="@+id/etTeacherInfoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:text="610789"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_name" />

                <EditText
                    android:id="@+id/etTeacherInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="王大民"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_gender" />

                <EditText
                    android:id="@+id/etTeacherInfoGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="男"
                    android:textColor="@color/colorTextBlack"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_dayOfBirth" />

                <EditText
                    android:id="@+id/etTeacherInfoDayOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:inputType="text"
                    android:text="1999/04/04"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_phoneNumber" />

                <EditText
                    android:id="@+id/etTeacherInfoPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:inputType="phone"
                    android:text="0912345678"/>

            </LinearLayout>

            <Button
                android:id="@+id/btUpdateStudentInfo"
                android:onClick="btTeacherProfileUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_confirmEditInfo"
                android:textColor="@color/colorTextWhite" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>