<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/NewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/NewAccount"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etStudentAccountID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewAccount"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/NewPassword"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etStudentAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPassword"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/StudentName"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/StudentName"
            android:textSize="25dp" />


        <Button
            android:id="@+id/btAddStudentAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddStudent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:padding="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ListView
                    android:id="@+id/AddAccountList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </ListView>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>